--- a/FoodsReview.csproj
+++ b/FoodsReview.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Version>v1.0.2</Version>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <ItemGroup>
